--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>group17</groupId>
     <artifactId>calculator-artifact</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <properties>
         <!-- https://maven.apache.org/general.html#encoding-warning -->
