--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <packaging>war</packaging>
 
     <properties>
+        <java.version>1.8</java.version>
         <!-- https://maven.apache.org/general.html#encoding-warning -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
