Docker builds and runs, but with exception

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,12 +2,7 @@ FROM adoptopenjdk:8-jre-hotspot
 
 WORKDIR /app
 
-COPY ./target/calculator-artifact-thorntail.jar ./src
+COPY ./target/calculator-artifact-thorntail.jar ./src/monolith.jar
 
-WORKDIR /src
-
-CMD java -Xmx64m \
--Djava.net.preferIPv4Stack=true \
--Djava.net.preferIPv4Addresses=true \
--jar calculator-artifact-thorntail.jar
+CMD [ "java", "-jar", "./src/monolith.jar" ]
 
