--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,5 +4,10 @@ WORKDIR /app
 
 COPY ./target/calculator-artifact-thorntail.jar ./src/monolith.jar
 
-CMD [ "java", "-jar", "./src/monolith.jar" ]
+CMD [ "java", \
+      "-Xmx64m", \
+      "-Djava.net.preferIPv4Stack=true", \
+      "-Djava.net.preferIPv4Addresses=true", \
+      "-jar", \
+      "./src/monolith.jar" ]
 
