Update Dockerfile and Jenkinsfile to run microservice architecture for customer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 
 services:
-  dtupay:
-    image: dtupay:0.1
+  customer:
+    image: customer:0.1
     build:
       context: .
-      dockerfile: ./docker/Dockerfile
+      dockerfile: ./docker/Dockerfile.customer
     ports:
       - "8080:8080"
