--- a/docker/Dockerfile.customer
+++ b/docker/Dockerfile.customer
@@ -2,12 +2,12 @@ FROM adoptopenjdk:8-jre-hotspot
 
 WORKDIR /app
 
-COPY ./target/calculator-artifact-thorntail.jar ./src/monolith.jar
+COPY ./CustomerMicroservice/target/customer-microservice-thorntail.jar ./src/customer-microservice.jar
 
 CMD [ "java", \
       "-Xmx64m", \
       "-Djava.net.preferIPv4Stack=true", \
       "-Djava.net.preferIPv4Addresses=true", \
       "-jar", \
-      "./src/monolith.jar" ]
+      "./src/customer-microservice.jar" ]
 
