--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,11 @@ services:
       context: .
       dockerfile: ./docker/Dockerfile.customer
     ports:
-      - "8080:8080"
+      - "8081:8080"
+  token:
+    image: token:0.1
+    build:
+      context: .
+      dockerfile: ./docker/Dockerfile.token
+    ports:
+      - "8082:8080"
