Tried to expose port 8080 inside containers

--- a/docker/Dockerfile.token
+++ b/docker/Dockerfile.token
@@ -4,6 +4,8 @@ WORKDIR /app
 
 COPY ./TokenMicroservice/target/token-microservice-thorntail.jar ./src/token-microservice.jar
 
+EXPOSE 8080
+
 CMD [ "java", \
       "-Xmx64m", \
       "-Djava.net.preferIPv4Stack=true", \
