--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,10 @@ services:
       dockerfile: ./docker/Dockerfile.token
     ports:
       - "8082:8080"
+  merchant:
+    image: merchant:0.1
+    build:
+      context: .
+      dockerfile: ./docker/Dockerfile.merchant
+    ports:
+      - "8084:8080"
