--- a/DTUPay/pom.xml
+++ b/DTUPay/pom.xml
@@ -164,6 +164,11 @@
             <artifactId>json</artifactId>
             <version>20190722</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-scala-specs2_2.12</artifactId>
+            <version>1.10.4</version>
+        </dependency>
     </dependencies>
 
 
