--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ TokenMicroservice/target/token-microservice.war.original
 TokenMicroservice/target/surefire-reports/TEST-com.token.cucumber.CucumberTest.xml
 TokenMicroservice/target/surefire-reports/com.token.cucumber.CucumberTest.txt
 TokenMicroservice/target/maven-archiver/pom.properties
+*.pyc
