--- a/DTUPay/pom.xml
+++ b/DTUPay/pom.xml
@@ -183,6 +183,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>group17</groupId>
+            <artifactId>dtupay</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
